英名に変更

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <main class="maneppe_main">
       <div class="maneppe_spacer"></div>
       <div class="maneppe_content maneppe_logo">
-        <img src="./アスペクト比を整える.png" width="865" height="340" />
+        <img src="https://github.com/hibiki0147/maneppe/blob/main/images/%E3%82%A2%E3%82%B9%E3%83%9A%E3%82%AF%E3%83%88%E6%AF%94%E3%82%92%E6%95%B4%E3%81%88%E3%82%8B.png" width="865" height="340" />
       </div>
       <div class="maneppe_spacer"></div>
       <div>
