--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <main class="maneppe_main">
       <div class="maneppe_spacer"></div>
       <div class="maneppe_content maneppe_logo">
-        <img src="https://github.com/hibiki0147/maneppe/blob/main/images/%E3%82%A2%E3%82%B9%E3%83%9A%E3%82%AF%E3%83%88%E6%AF%94%E3%82%92%E6%95%B4%E3%81%88%E3%82%8B.png" width="865" height="340" />
+        <img src="https://raw.githubusercontent.com/hibiki0147/maneppe/main/images/eyecatch.png" width="865" height="340" />
       </div>
       <div class="maneppe_spacer"></div>
       <div>
@@ -26,8 +26,8 @@
             <div class="maneppe_WorkIntro_img">
               「マネッペ」は猫の一生にかかるお金を計算するためのwebサイトです。
               <a href="https://maneppe.com/" aria-label="サイトへのリンク">
-                <img class="maneppe_WorkIntro_keyvisual" src="./キービジュアル.png" />
-                <img class="maneppe_WorkIntro_bottom" src="./帽子被り２.png">
+                <img class="maneppe_WorkIntro_keyvisual" src="https://raw.githubusercontent.com/hibiki0147/maneppe/main/images/keyvisual.png" />
+                <img class="maneppe_WorkIntro_bottom" src="https://raw.githubusercontent.com/hibiki0147/maneppe/main/images/WearingHat2.png">
               </a>
             </div>
             <div class="maneppe_WorkIntro_text">
