フッターの画像が読み込まれてんかったので変更

--- a/index.html
+++ b/index.html
@@ -206,8 +206,8 @@
       <div>
         &copy;team bee
       </div>
-      <img class="maneppe_footer_icon maneppe_left_icon" src="./ノーマル.svg">
-      <img class="maneppe_footer_icon maneppe_right_icon" src="./ねことコインldpi.svg" />
+      <img class="maneppe_footer_icon maneppe_left_icon" src="https://raw.githubusercontent.com/hibiki0147/maneppe/main/images/normal.svg">
+      <img class="maneppe_footer_icon maneppe_right_icon" src="https://raw.githubusercontent.com/hibiki0147/maneppe/main/images/catAndCoin.svg" />
       <style>
         .maneppe_footer {
           position: relative;
