--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
             "value": "#fff"
           },
           "shape": {
-            "type": "circle",
+            "type": "image",
             "stroke": {
               "width": 0,
               "color": "#000000"
@@ -310,7 +310,7 @@
               "nb_sides": 5
             },
             "image": {
-              "src": "https://raw.githubusercontent.com/hibiki0147/maneppe/main/images/cloud.svg",
+              "src": "https://raw.githubusercontent.com/hibiki0147/maneppe/084f643f09d2e9ad93f05b31508b28dbe283e0f8/images/cloud.png",
               "width": 100,
               "height": 100
             }
