--- a/index.html
+++ b/index.html
@@ -310,9 +310,9 @@
               "nb_sides": 5
             },
             "image": {
-              "src": "https://raw.githubusercontent.com/hibiki0147/maneppe/084f643f09d2e9ad93f05b31508b28dbe283e0f8/images/cloud.png",
-              "width": 100,
-              "height": 100
+              "src": "https://raw.githubusercontent.com/hibiki0147/maneppe/main/images/cloud.png",
+              "width": 228,
+              "height": 130
             }
           },
           "opacity": {
@@ -344,7 +344,7 @@
           },
           "move": {
             "enable": true,
-            "speed": 1.6000000000000003,
+            "speed": 0.1,
             "direction": "left",
             "random": false,
             "straight": true,
