keyvisualの遅延読み込み止める（ファーストビュー判定だったらしい）

--- a/index.html
+++ b/index.html
@@ -474,7 +474,7 @@
             <div class="maneppe_WorkIntro_img">
               「マネッペ」は猫の一生にかかるお金を計算するためのwebサイトです。
               <a href="https://maneppe.com/" target="_blank" aria-label="サイトへのリンク">
-                <img class="maneppe_WorkIntro_keyvisual" src="https://raw.githubusercontent.com/hibiki0147/maneppe/main/images/keyvisual.webp" alt="webサイト、マネッペのシミュレーション画面の画像" width="663" height="328" loading="lazy" />
+                <img class="maneppe_WorkIntro_keyvisual" src="https://raw.githubusercontent.com/hibiki0147/maneppe/main/images/keyvisual.webp" alt="webサイト、マネッペのシミュレーション画面の画像" width="663" height="328"/>
                 <img class="maneppe_WorkIntro_bottom" src="https://raw.githubusercontent.com/hibiki0147/maneppe/main/images/WearingHat2.webp" alt="webサイト、マネッペのキャラクター。ビーバー。博士帽を被り、人参でシミュレーション画面の画像を指している。" width="225" height="214" loading="lazy">
                 <span class="maneppe_WorkIntro_tooltip">サイトを開く</span>
               </a>
