--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
       body {
         margin: 0;
         padding: 0;
-        overflow-x: hidden;
         background-color: #b2d3ea40;
       }
       .maneppe_main {
@@ -20,6 +19,7 @@
         flex-direction: column;
         align-items: center;
         position: relative;
+        overflow: hidden;
         background-color: #ffffff50;
       }
       .maneppe_logo {
@@ -317,7 +317,7 @@
             .maneppe_Whose_tail_area {
               position: absolute;
               right:0;
-              bottom: 0;
+              bottom: 24px;
               width: 2rem;
               transform: scale(-1, 1);
               border: none;
@@ -944,7 +944,7 @@
               display: flex;
               transform: translate(0, -50%);
             }
-            1% {
+            99% {
               display: flex;
               transform: translate(100%, -50%);
             }
