スマホで見たとき、contact に改行なかったので修正

--- a/index.html
+++ b/index.html
@@ -1002,11 +1002,11 @@
           }
 
           function memberCommentArray1() {
-            return ['職種がフロントエンドで、今後の為にwebの勉強したくてreact触ってみたけど難しい。でも楽しいです。\r\n', 'contact', getMailATag('kd1288853@st.kobedenshi.ac.jp')];
+            return ['職種がフロントエンドで、今後の為にwebの勉強したくてreact触ってみたけど難しい。でも楽しいです。\r\n', 'contact\r\n', getMailATag('kd1288853@st.kobedenshi.ac.jp')];
           }
 
           function memberCommentArray2() {
-            return ['好きな猫についてのサービスを、好きなchartJSを使って作れて、優しいメンバー達にも恵まれて、本当に楽しい制作でした！\r\n', 'contact', getMailATag('kd1325335@st.kobedenshi.ac.jp')];
+            return ['好きな猫についてのサービスを、好きなchartJSを使って作れて、優しいメンバー達にも恵まれて、本当に楽しい制作でした！\r\n', 'contact\r\n', getMailATag('kd1325335@st.kobedenshi.ac.jp')];
           }
 
           function memberCommentArray3() {
@@ -1021,19 +1021,19 @@
             schoolATag.setAttribute('target', 'blank');
 
 
-            return ['劇団のホームページとか運営してます～。\r\n最近はUnity, Blenderで学校の教室作ってみたり、趣味でMMD触ってみたり色々して楽しんでます～。\r\n今回の開発においては、ReactやNode.jsに触れられて面白かった～。\r\n猫飼ってはいませんが、好きなので、ちょっと詳しくなれたの嬉しい～\r\n\r\n劇団 花観小屋\r\n ', hanamigoyaATag, '学校の教室 \r\n ', schoolATag, 'contact', getMailATag('kd1327079@st.kobedenshi.ac.jp')];
+            return ['劇団のホームページとか運営してます～。\r\n最近はUnity, Blenderで学校の教室作ってみたり、趣味でMMD触ってみたり色々して楽しんでます～。\r\n今回の開発においては、ReactやNode.jsに触れられて面白かった～。\r\n猫飼ってはいませんが、好きなので、ちょっと詳しくなれたの嬉しい～\r\n\r\n劇団 花観小屋\r\n ', hanamigoyaATag, '\r\n学校の教室 \r\n ', schoolATag, '\r\ncontact\r\n', getMailATag('kd1327079@st.kobedenshi.ac.jp')];
           }
 
           function memberCommentArray4() {
-            return ['デザインを考えるようになってから、街中で広告や案内図などの配色、文字の位置などを細かく見るようになってしまい目が疲れています...\r\n', 'contact', getMailATag('kd1331030@st.kobedenshi.ac.jp')];
+            return ['デザインを考えるようになってから、街中で広告や案内図などの配色、文字の位置などを細かく見るようになってしまい目が疲れています...\r\n', 'contact\r\n', getMailATag('kd1331030@st.kobedenshi.ac.jp')];
           }
 
           function memberCommentArray5() {
-            return ['今回の役割としてはフロントたくさん、バック少々しました。\r\n基本的に自分に振られたタスク+αメンバーの手が足りていない部分を手伝ったりしました。\r\n今回は、新しい言語や技術に触れられて楽しかったです。\r\n', 'contact', getMailATag('kd1330280@st.kobedenshi.ac.jp')];
+            return ['今回の役割としてはフロントたくさん、バック少々しました。\r\n基本的に自分に振られたタスク+αメンバーの手が足りていない部分を手伝ったりしました。\r\n今回は、新しい言語や技術に触れられて楽しかったです。\r\n', 'contact\r\n', getMailATag('kd1330280@st.kobedenshi.ac.jp')];
           }
 
           function memberCommentArray6() {
-            return ['Reactを使っての開発は初めてで大変やったけど、自分ができることは頑張りました。お疲れ様でしたー！\r\n', 'contact', getMailATag('kd1316182@st.kobedenshi.ac.jp')];
+            return ['Reactを使っての開発は初めてで大変やったけど、自分ができることは頑張りました。お疲れ様でしたー！\r\n', 'contact\r\n', getMailATag('kd1316182@st.kobedenshi.ac.jp')];
           }
 
           const memberCommentArray = [
